# QtxlsxDemo

./: CMakeLists.txt
Demo/: CMakeLists.txt  main.cpp
Demo/UI/: MainWindow.cpp  MainWindow.h
Demo/UI/Xlsx/: XlsxOperator.cpp  XlsxOperator.h
